--- a/Pipfile
+++ b/Pipfile
@@ -4,6 +4,8 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+pep8 = "*"
+pylint = "*"
 
 [packages]
 flask = "*"
@@ -12,6 +14,10 @@ wtforms = "*"
 flask-migrate = "*"
 flask-sqlalchemy = "*"
 ipython = "*"
+flask-login = "*"
+jedi = "*"
+autoflake = "*"
+coverage = "*"
 
 [requires]
 python_version = "3.7"
